--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
   <style>
     body {
-      background-color: brown;
+      background-color: blue;
       color: white;
       text-align: center;
       margin: 0;
@@ -66,11 +66,10 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
 <a href="https://github.com/">github</a>
 <a href=https://cpr.heart.org/en/courses/heartsaver-cpr-aed-course-options>CPR</a>
 </div>
-<img src="C:\Users\hp\Downloads\download  Cpr.jpeg" alt="picture of someone receiving CPR" width="500">
-<img src="C:\Users\hp\Downloads\first-aid-for-choking.webp" alt="Heimlch Maneuver" width="500">
+<img src="https://www.mayoclinic.org/-/media/kcms/gbs/patient-consumer/images/2018/02/13/21/50/cpr-chest-compressions-illustration-8col-3678934-3c.jpg"alt=CPR height="500" width="500">
+<img src="https://s3.amazonaws.com/files.cprcertified.com/uploads/archive/heimlich-child.jpg" alt="Heimlch Maneuver"height='"500" width="500">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9KeJ3QCZebE?si=q9sOTuR-rTT0KGSA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<video src="C:\Users\hp\OneDrive - Daystar University\Documents\WhatsApp Video 2025-09-28 at 02.07.54_b249011a.mp4" controls width="400" height="400"></video>
 
 
 
@@ -133,11 +132,9 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
 <br>
 <h3> N.O. 0712345678</h3>
 <br>
-<h3> Gmail Levin@gmail.com</h3>
+<a href= "Gmail" Levin@gmail.com</a>
 
 <br>
 <br>
 
-<footer>
-  <div class="scroll-text">Developed by Levin Kibeti .All rights reserved</div>
-</footer>
+ <footer><marquee behavior="" direction="">Developed by levin kibeti & All rights are reserved 2025 </marquee></footer>
