--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
   <style>
     body {
-      background-color: blue;
+      background-color: green;
       color: white;
       text-align: center;
       margin: 0;
@@ -135,4 +135,5 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
 <br>
 
  <footer><marquee behavior="" direction="">Developed by levin kibeti & All rights are reserved 2025 </marquee></footer>
+
 
