--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 
-  <style>
-    body {
-      background-color: green;
-      color: white;
-      text-align: center;
-      margin: 0;
-      padding: 0;
+  <h1>
+colour:blue;
     }
 
   </style>
@@ -135,5 +130,6 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
 <br>
 
  <footer><marquee behavior="" direction="">Developed by levin kibeti & All rights are reserved 2025 </marquee></footer>
+
 
 
