--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-  <h1>
+  <style>
 colour:blue;
     }
 
@@ -130,6 +130,7 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
 <br>
 
  <footer><marquee behavior="" direction="">Developed by levin kibeti & All rights are reserved 2025 </marquee></footer>
+
 
 
 
