--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-
+<head>
   <style>
     {
 colour:blue;
-    }
+    }</head>
+
 
   </style>
 
@@ -61,6 +62,7 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
  <div style="text-align:center">
 <a href="https://github.com/">github</a>
 <a href=https://cpr.heart.org/en/courses/heartsaver-cpr-aed-course-options>CPR</a>
+
 
 
 
