--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 
 
 <div style="text-align: center">
-  <h1>Evolve Emergency Global Trainers</h1>
-  <head>
+  <h1>Evolve Emergency Global Trainers
+
   <style>
     {
 colour:blue;
     
   </style>
 
-    }</head>
+    }</h1>
   <p>Learn ACLS, BLS, and Heartsaver skills.</p>
 </div>
 
@@ -64,6 +64,7 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
  <div style="text-align:center">
 <a href="https://github.com/">github</a>
 <a href=https://cpr.heart.org/en/courses/heartsaver-cpr-aed-course-options>CPR</a>
+
 
 
 
