--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 
 
 <div style="text-align: center">
+  <style>colour:blue</style>
   <h1>Evolve Emergency Global Trainers
-
-  <style>
-    {
-colour:blue;
-    
-  </style>
-
+ ;
     }</h1>
   <p>Learn ACLS, BLS, and Heartsaver skills.</p>
 </div>
@@ -64,6 +59,7 @@ Goal: Empower everyday people to save lives before medical professionals arrive.
  <div style="text-align:center">
 <a href="https://github.com/">github</a>
 <a href=https://cpr.heart.org/en/courses/heartsaver-cpr-aed-course-options>CPR</a>
+
 
 
 
